Agregando Funcionalidades del director y creacion del formato A

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.gson-2.3.jar=C:\\Users\\pcblanco\\Documents\\NetBeansProjects\\ProyectoNotas\\gson-2.3.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,7 +41,8 @@ j2ee.platform.wscompile.classpath=C:/Program Files/NetBeans 8.0.1/saaj-api.jar:C
 j2ee.server.type=JBoss4
 jar.compress=false
 javac.classpath=\
-    ${libs.primefaces.classpath}
+    ${libs.primefaces.classpath}:\
+    ${file.reference.gson-2.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
