--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -838,8 +838,8 @@ CreateTrabajodegradoLabel_trabajoid=Trabajoid:
 CreateTrabajodegradoRequiredMessage_trabajoid=The Trabajoid field is required.
 CreateTrabajodegradoTitle_trabajoid=Trabajoid
 CreateTrabajodegradoLabel_trabajonombre=Trabajonombre:
-CreateTrabajodegradoRequiredMessage_trabajonombre=The Trabajonombre field is required.
-CreateTrabajodegradoTitle_trabajonombre=Trabajonombre
+CreateTrabajodegradoRequiredMessage_trabajonombre=El campo Nombre de Trabajo De Grado es requeirodo.
+CreateTrabajodegradoTitle_trabajonombre=Nombre del Trabajo de Grado
 EditTrabajodegradoTitle=Edit Trabajodegrado
 EditTrabajodegradoSaveLink=Save
 EditTrabajodegradoViewLink=View
