--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -1,3 +1,4 @@
+AppName=SISTEMA GESTOR DE TRABAJOS DE GRADO
 PersistenceErrorOccured=A persistence error occurred.
 Previous=Previous
 Next=Next
@@ -827,8 +828,8 @@ ListRolFormatoproductoTitle_rolformatoprodid=Rolformatoprodid
 ListRolFormatoproductoTitle_responsabilidad=Responsabilidad
 ListRolFormatoproductoTitle_rolid=Rolid
 ListRolFormatoproductoTitle_formatoid=Formatoid
-TrabajodegradoCreated=Trabajodegrado was successfully created.
-TrabajodegradoUpdated=Trabajodegrado was successfully updated.
+TrabajodegradoCreated=El trabajo de grado fue guardado exitosamente.
+TrabajodegradoUpdated=El trabajo de grado fue actualizado exitosamente.
 TrabajodegradoDeleted=Trabajodegrado was successfully deleted.
 CreateTrabajodegradoTitle=Create New Trabajodegrado
 CreateTrabajodegradoSaveLink=Save
