--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -14,7 +14,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=
+client.urlPart=/faces/Paginas/General/Director.xhtml
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -42,8 +42,7 @@ j2ee.server.type=JBoss4
 jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
-    ${file.reference.gson-2.3.jar}:\
-    ${file.reference.gson-2.3.jar-1}
+    ${file.reference.gson-2.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -70,7 +69,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
