--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ excludes=
 file.reference.commons-fileupload-1.3.1.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\commons-fileupload-1.3.1.jar
 file.reference.commons-io-2.4.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\commons-io-2.4.jar
 file.reference.gson-2.3.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\gson-2.3.jar
+file.reference.itextpdf-5.5.1.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\itextpdf-5.5.1.jar
 file.reference.mail.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\mail.jar
 includes=**
 j2ee.compile.on.save=true
@@ -55,7 +56,8 @@ javac.classpath=\
     ${file.reference.commons-fileupload-1.3.1.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.gson-2.3.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.itextpdf-5.5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
