--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,6 +42,7 @@ file.reference.commons-io-2.4.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\
 file.reference.gson-2.3.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\gson-2.3.jar
 file.reference.itextpdf-5.5.1.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\itextpdf-5.5.1.jar
 file.reference.mail.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\mail.jar
+file.reference.primefaces-5.2.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\primefaces-5.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -52,8 +53,8 @@ j2ee.platform.wscompile.classpath=C:/Program Files (x86)/NetBeans 8.0.2/saaj-api
 j2ee.server.type=JBoss4
 jar.compress=false
 javac.classpath=\
-    ${libs.primefaces.classpath}:\
     ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.primefaces-5.2.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.gson-2.3.jar}:\
     ${file.reference.mail.jar}:\
@@ -64,8 +65,8 @@ javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
