--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,12 +37,12 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.commons-fileupload-1.3.1.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\commons-fileupload-1.3.1.jar
-file.reference.commons-io-2.4.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\commons-io-2.4.jar
-file.reference.gson-2.3.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\gson-2.3.jar
-file.reference.itextpdf-5.5.1.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\itextpdf-5.5.1.jar
-file.reference.mail.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\mail.jar
-file.reference.primefaces-5.2.jar=C:\\Users\\seven\\Documents\\NetBeansProjects\\dot-jar-proyecto-ii\\primefaces-5.2.jar
+file.reference.commons-fileupload-1.3.1.jar=D:\\commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.4.jar=D:\\commons-io-2.4.jar
+file.reference.gson-2.3.jar=D:\\gson-2.3.jar
+file.reference.itextpdf-5.5.1.jar=D:\\itextpdf-5.5.1.jar
+file.reference.mail.jar=D:\\mail.jar
+file.reference.primefaces-5.2.jar=D:\\primefaces-5.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -54,11 +54,11 @@ j2ee.server.type=JBoss4
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-fileupload-1.3.1.jar}:\
-    ${file.reference.primefaces-5.2.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.gson-2.3.jar}:\
+    ${file.reference.itextpdf-5.5.1.jar}:\
     ${file.reference.mail.jar}:\
-    ${file.reference.itextpdf-5.5.1.jar}
+    ${file.reference.primefaces-5.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
